--- a/Lesson 12 - ExpressJS/views/profile.ejs
+++ b/Lesson 12 - ExpressJS/views/profile.ejs
@@ -1,36 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/head.ejs', {title: "Your profile"}); %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My website</title>
-    <style>
-        body {
-            background-color: skyblue;
-            font-family: sans-serif;
-            font-size: 32px;
-            padding: 30px;
-            color: white;
-        }
+<h1>Welcome, <%= person %></h1>
+<p>You're viewing your profile!</p>
 
-        h1 {
-            text-align: center;
-            letter-spacing: 5px;
-            text-transform: uppercase;
-        }
-
-        p {
-            font-size: 24px;
-            text-align: center;
-        }
-    </style>
-
-</head>
-
-<body>
-    <h1>Welcome, <%= person %></h1>
-    <p>You're viewing your profile!</p>
-</body>
-
-</html>
+<%- include('partials/footer.ejs'); %>
