feat: serving static files

--- a/Lesson 12 - ExpressJS/views/partials/head.ejs
+++ b/Lesson 12 - ExpressJS/views/partials/head.ejs
@@ -4,31 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
-    <style>
-        body {
-            background-color: skyblue;
-            font-family: sans-serif;
-            font-size: 32px;
-            padding: 30px;
-            color: white;
-        }
-
-        h1 {
-            text-align: center;
-            letter-spacing: 5px;
-            text-transform: uppercase;
-        }
-
-        p {
-            font-size: 24px;
-            text-align: center;
-        }
-    </style>
+    <title>
+        <%= title %>
+    </title>
+    <link rel="stylesheet" href="/static/styles.css">
 
 </head>
 
 <body>
-
     <!-- Navbar -->
     <%- include('nav.ejs'); %>
