--- a/Lesson 12 - ExpressJS/views/contact.ejs
+++ b/Lesson 12 - ExpressJS/views/contact.ejs
@@ -1,6 +1,16 @@
 <%- include('partials/head.ejs', {title: "Contact me"}); %>
 
 <h1>This is the contact page</h1>
-<p>Contact us!</p>
+<p>Contact the coolest cats on the web right here...</p>
+
+<form id="contact-form">
+    <label for="who">Who do you want to contact?</label>
+    <input type="text" name="who" value="<%= qs.person %>" disabled>
+    <label for="department">Which department?</label>
+    <input type="text" name="department" value="<%= qs.dept %>" disabled>
+    <label for="email">Your email</label>
+    <input type="email" name="email">
+    <input type="submit" value="submit">
+</form>
 
 <%- include('partials/footer.ejs'); %>
