--- a/Lesson 12 - ExpressJS/views/contact.ejs
+++ b/Lesson 12 - ExpressJS/views/contact.ejs
@@ -3,14 +3,18 @@
 <h1>This is the contact page</h1>
 <p>Contact the coolest cats on the web right here...</p>
 
-<form id="contact-form">
+<form id="contact-form" method="POST" action="/contact">
+
     <label for="who">Who do you want to contact?</label>
-    <input type="text" name="who" value="<%= qs.person %>" disabled>
+    <input type="text" name="who" value="<%= qs.person %>"/>
+
     <label for="department">Which department?</label>
-    <input type="text" name="department" value="<%= qs.dept %>" disabled>
+    <input type="text" name="department" value="<%= qs.dept %>"/>
+
     <label for="email">Your email</label>
-    <input type="email" name="email">
-    <input type="submit" value="submit">
+    <input type="email" name="email"/>
+
+    <input type="submit" value="submit"/>
 </form>
 
 <%- include('partials/footer.ejs'); %>
